# rag-agent-workbench

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml  test_json_cleaning.py  verify_unstructured_deps.py
.beads/: metadata.json
.beads/hooks/: pre-commit
.cursor/rules/: beads.mdc
.gemini/: settings.json
.husky/: pre-commit
alembic/: env.py
alembic/versions/: 688b6dec2a24_initial_schema.py
client/: .gitignore  README.md  biome.json  package.json  playwright.config.ts  pnpm-lock.yaml  vite.config.ts
client/src/: App.test.tsx  App.tsx  index.css  main.tsx
client/src/hooks/: useDocuments.test.tsx  useDocuments.ts  useRAGQuery.test.tsx  useRAGQuery.ts  useRAGStream.test.tsx  useRAGStream.ts
client/src/test/: setup.ts
client/src/types/: api.ts
client/tests/: preview.spec.ts  visual.spec.ts
data/eval/: golden_set.json
data/eval/reports/: evaluation_20260408_235032.md  evaluation_20260409_022340.md  evaluation_20260409_101539.md  evaluation_20260409_103530.md  evaluation_20260409_111056.md  evaluation_20260409_111146.md  evaluation_20260409_112306.md  evaluation_20260409_113807.md  evaluation_20260409_115001.md  evaluation_20260409_120248.md  evaluation_20260409_121608.csv  (+3 more)
mcp_bridge/: README.md  biome.json  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
mcp_bridge/src/: index.test.ts  index.ts
rag/: .env.example  .pre-commit-config.yaml  README.md  pyproject.toml
rag/alembic/: env.py
rag/scripts/: init-db.sh  test_db_connection.py
rag/tests/: test_api.py  test_api_documents.py  test_api_evaluation.py  test_api_ingestion.py  test_api_query.py  test_api_stream.py  test_chunker.py  test_database.py  test_document_preview.py  test_extractor.py  test_logger.py  test_rag_basics.py  test_rag_engine.py
scripts/: test_db_connection.py
src/rag/: cli.py  main.py
src/v2_one/: main.py
tests/: test_api_evaluation.py  test_api_ingestion.py  test_api_stream.py  test_database.py  test_logger.py  test_ollama_client.py  test_rag_basics.py  test_rag_engine.py
(+70 files in other folders)
